# docker-example-appl/src/main/java/com/rogerpeyer/dockerexample/persistence/model/ProductPo.java
@@ -3,70 +3,31 @@ package com.rogerpeyer.dockerexample.persistence.model;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
-import javax.persistence.PrePersist;
-import javax.persistence.PreUpdate;
-import javax.persistence.Version;
 import javax.validation.constraints.NotNull;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.redis.core.RedisHash;
 
-@Entity
+@RedisHash("product")
 public class ProductPo {
 
-  @Id
-  @GeneratedValue(strategy = GenerationType.AUTO)
-  private Long id;
+  @Id private String id;
 
-  @Version
-  private Long version;
+  @NotNull private String name;
 
-  @NotNull
-  private String name;
+  @NotNull private BigDecimal price;
 
-  @NotNull
-  private BigDecimal price;
-
-  @NotNull
-  private LocalDate releaseDate;
+  @NotNull private LocalDate releaseDate;
 
   private OffsetDateTime lastModified;
 
   private OffsetDateTime createdOn;
 
-  /**
-   * Pre persist.
-   */
-  @PrePersist
-  public void prePersist() {
-    createdOn = OffsetDateTime.now();
-    lastModified = OffsetDateTime.now();
-
-  }
-
-  /**
-   * Pre update.
-   */
-  @PreUpdate
-  public void preUpdate() {
-    lastModified = OffsetDateTime.now();
-  }
-
-  public Long getId() {
+  public String getId() {
     return id;
   }
 
-  public void setId(Long id) {
+  public void setId(String id) {
     this.id = id;
-  }
-
-  public Long getVersion() {
-    return version;
-  }
-
-  public void setVersion(Long version) {
-    this.version = version;
   }
 
   public LocalDate getReleaseDate() {
